# BendingSubspace

./: .gitignore  CMakeLists.txt  main.cpp
3d/: base_cam.py  main.py
Archive/: CMakeLists.txt  SfPhysicalPropertyHelper.cpp  convert_mat_to_pkl.py  gauss_seidel.py  main.cpp  main.py
Step1FromBezierToBendingStiffness/: 2d_tex_gui.py  bezier_curve.py  calculate_bending_stiffness_from_bezier.py  calculate_bending_stiffness_from_bezier_for_1d_evaluation.py  combine_images.py  draw_photo_and_bezier_for_1d_evaluation.py  dump_bending_stiffness.py  imgui.ini  load_bending_bezier_data.py  solve_bending_equation.py
Step1FromBezierToBendingStiffness/archive/: solve_bending_equation_new.py  solve_easy_equation.py
Step1FromBezierToBendingStiffness/bezier_record_dir/: 133yaolirong.json  40danligongduan.json  46siguangqiaqi.json
Step2FromGBToSim/: calculate_sim_param.py  calculate_sim_param_1d_evaluation.py  iterative_solver.py  physical_prop_helper.py
Step3Subspace/: draw_3d.py  vae.py  vae_subspace.py
Step3Subspace/Step1VAEtraining/: dataloader.py  split_trainset.py  vae_subspace.py
Step3Subspace/Step2GenSamplingPts/: 20210910_sampling.pkl  20210910_sampling_new.pkl  round_sampling.py  sampling_from_subspace.py
Step3Subspace/archive/: vae_MNIST.py  vae_new.py
Step3Subspace/output/: 20210909_version1.pkl  20210910_version2.pkl
Step4ExtendedData/: geneate_extended_bending_sim_param.py
cmake/: set_matplotlibcpp.cmake
render/: imgui.ini  render.py
src/bending/: BendingGui.cpp  BendingGui.h  CMakeLists.txt
src/bending/bezier/: BendingStiffness.cpp  BendingStiffness.h  BendingStiffnessToLinctexGUIConverter.cpp  BendingStiffnessToLinctexGUIConverter.h  BezierCurve.cpp  BezierCurve.h  BezierCurvePhysics.cpp  BezierCurvePhysics.h  BezierShootSolver.cpp  BezierShootSolver.h  BezierShootSolver2.cpp  BezierShootSolver3.cpp  BezierShootSolver4.cpp
src/bending/load/: BendingData.cpp  BendingData.h  BendingDataCloth.cpp  BendingDataCloth.h  BendingDataFace.cpp  BendingDataFace.h  BendingDataLoader.cpp  BendingDataLoader.h
src/render/: CMakeLists.txt  RenderCallback.cpp  RenderResource.cpp  RenderResource.h  RenderableBase.h  render.cpp  render.h
src/utils/: CMakeLists.txt  FileUtil.cpp  FileUtil.h  LogUtil.h  MatlabFileUtil.cpp  MatlabFileUtil.h  OpenCVUtil.cpp  OpenCVUtil.h  RegexUtil.cpp  RegexUtil.h
